fixed spacing overflow issue by floating the dropdowns

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,9 @@ h2
     display:none;
 }
 
+.left {float:left;}
+.right {float:right;}
+
 body
 {
 	/* default behavior */
